@startuml

title __LISTENER's Class Diagram__\n

  namespace uoc.tfm.vmejia.speedrun {
    namespace listener {
      class uoc.tfm.vmejia.speedrun.listener.ConnectListener {
          + ConnectListener()
          + onJoin()
          + onQuit()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace listener {
      class uoc.tfm.vmejia.speedrun.listener.GameListener {
          + GameListener()
          + onBlockBreak()
          + onMarca()
          + onSignClick()
          + onWorldLoad()
      }
    }
  }
  

  uoc.tfm.vmejia.speedrun.listener.ConnectListener .up.|> org.bukkit.event.Listener
  uoc.tfm.vmejia.speedrun.listener.ConnectListener o-- uoc.tfm.vmejia.speedrun.SpeedRun : minigame
  uoc.tfm.vmejia.speedrun.listener.GameListener .up.|> org.bukkit.event.Listener
  uoc.tfm.vmejia.speedrun.listener.GameListener o-- uoc.tfm.vmejia.speedrun.SpeedRun : minigame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
